results/SVCOMP/4-shot/log-exceptions11-2024_03_18_15_10_09.txt
class A extends RuntimeException {
  int i = 1;
}
;

class B extends A {}
;

public class exceptions11 {
  //@ requires k == 0 || k != 0;
  //@ ensures \result == 1;
  static int foo(int k) {
    try {
      if (k == 0) {
        A a = new A();
        throw a;
      } else {
        A b = new A();
        throw b;
      }

    } catch (B exc) {
      assert exc.i == 1;
    }
    return 1;
  }

  //@ ensures \result == 1;
  public static void main(String[] args) {
    try {
      A a = new A();
      foo(6);
    } catch (A exc) {
      assert exc.i == 2;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions11.java:28: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == 1;
               ^
1 error

